# claude-codex-pid-inspector

./: .gitignore  Cargo.toml  README.md
examples/: debug_scan.rs
src/: action.rs  app.rs  config.rs  event.rs  main.rs  tui.rs
src/process/: filter.rs  info.rs  mod.rs  scanner.rs  tree.rs
src/ui/: config_popup.rs  detail_view.rs  footer.rs  format.rs  mod.rs  popup.rs  status_bar.rs  styles.rs  tree_view.rs
