[package]
name = "pid-inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.38"
color-eyre = "0.6"
strum = { version = "0.26", features = ["derive"] }
futures = "0.3"
libc = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
