[package]
name = "agentop"
version = "0.5.0"
edition = "2021"
description = "A TUI process inspector for Claude Code and OpenAI Codex CLI — like top for AI coding agents"
license = "MIT"
repository = "https://github.com/leboiko/claude-codex-pid-inspector"
keywords = ["tui", "process", "claude", "codex", "monitor"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.38"
color-eyre = "0.6"
strum = { version = "0.26", features = ["derive"] }
futures = "0.3"
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
